data/derived/comb/progs/unify/prog5880.ml.out
Characters 136-138:
  | Sine e1              -> sin (pi *. (eval e1))
                                             ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'b
